[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
my-game = { package = "my-game", path = "../.." }
bevy = "0.9"
web-sys = { version = "0.3.60", features = ["Document", "Window"] }
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.11.0", features = ["yew_integration"] }
